# chatboteval

./: .gitignore  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  pyproject.toml
.discussion/: open_questions.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.requirements/: chat-evaluation-project
.reseach/: annotation_tool_reseach.md
deploy/annotation/: docker-compose.dev.yml
docs/: README.md  glossary.md
docs/decisions/: 0001-annotation-argilla-platform.md  0001-argilla-annotation-platform.md  0002-eval-metrics-taxonomy.md  0002-evaluation-approach.md  0002-metrics-taxonomy.md  0003-infra-self-hosted-only.md  0003-storage-format.md  0004-offline-evaluation-only.md  0004-synthetic-query-generation.md  0005-annotation-export-schema.md  0005-contract-layer-tooling.md  0005-infra-package-contracts.md  0005-storage-format.md  0006-annotation-tasks.md  0007-annotation-presentation.md  0007-packaging-invocation-surface.md  0008-annotation-interface-auth.md  0009-annotation-schema-configurability.md  0010-annotation-entrypoints.md  0010-annotation-multi-dataset-architecture.md  0011-annotation-import-formats.md  0011-infra-cli-commands.md  0012-infra-installation-setup-ux.md  0013-annotation-multi-dataset-architecture.md  0014-annotation-iaa-metric.md  0014-infra-package-contracts.md  README.md  (+1 more)
tests/: conftest.py  test_cli_querygen.py  test_invocation_surface.py  test_paths.py  test_querygen_input_contract.py  test_querygen_output.py  test_querygen_realize.py  test_querygen_settings.py  test_settings_base.py  test_smoke.py
(+95 files in other folders)
